<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    tools:context=".activities.ResultActivity"
    android:id="@+id/rootLinearLayoutResult">

    <TextView
        android:id="@+id/txtViewStep3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center"
        android:layout_margin="40dp"
        android:text="@string/txt_result"
        android:textColor="#e39f38"
        android:textSize="28sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgViewResult"
            android:layout_width="318dp"
            android:layout_height="245dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:weightSum="3">

            <Button
                android:id="@+id/btnDownload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/roundedcorner"
                android:drawableTop="@drawable/ic_download"
                android:text="@string/btn_download"
                android:visibility="invisible" />

            <Button
                android:id="@+id/btnHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/roundedcorner"
                android:drawableTop="@drawable/ic_home"
                android:text="@string/btn_home" />

            <Button
                android:id="@+id/btnShare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/roundedcorner"
                android:drawableTop="@drawable/ic_share"
                android:text="@string/btn_share"
                android:visibility="invisible" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
