<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    tools:context=".activities.Step1Activity">

    <ImageView
        android:layout_width="141dp"
        android:layout_height="144dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="80dp"
        android:src="@drawable/icon_launch" />

    <TextView
        android:id="@+id/txtViewStep1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center"
        android:layout_marginTop="60dp"
        android:text="@string/txt_step1"
        android:textColor="#e39f38"
        android:textSize="28sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="60dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnLoadGallery"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@drawable/roundedcorner"
            android:drawableTop="@drawable/ic_gallery"
            android:text="@string/btn_gallery" />

        <Button
            android:id="@+id/btnLoadCamera"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@drawable/roundedcorner"
            android:drawableTop="@drawable/ic_camera"
            android:text="@string/btn_camera" />
    </LinearLayout>

</LinearLayout>
